--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         app:avColor="@color/av_dark_blue"
         app:avDensity="0.5"
-        app:avSpeed="slow"
+        app:avSpeed="fast"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <WebView
