--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,4 +86,22 @@
         app:layout_constraintStart_toEndOf="@id/playPauseButton"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageButton
+        android:id="@+id/muteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/baseline_volume_mute_icon"
+        app:layout_constraintTop_toBottomOf="@id/playPauseButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/visualizerBtn"/>
+
+    <ImageButton
+        android:id="@+id/visualizerBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/baseline_visibility_visualizer_icon"
+        app:layout_constraintTop_toTopOf="@id/muteBtn"
+        app:layout_constraintStart_toEndOf="@id/muteBtn"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
