Visualizer: - Works on phone - Half works on target device (right is constant peak)
Mic:
- Working on pgone
- Working on target device (use earphones on the jack above the yellow light)

TODO:
- Remove Timer
- Rearrange texts
- Rearrange buttons
- OPTIMIZATION
- (Optional) Full Colour LED

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
     <com.gauravk.audiovisualizer.visualizer.BarVisualizer
         android:id="@+id/visualizer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
         app:avColor="@color/av_dark_blue"
         app:avDensity="0.5"
-        app:avSpeed="fast"
+        app:avSpeed="normal"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <WebView
