--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,26 +15,28 @@
         app:avSpeed="normal"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <!--    <TextView-->
+<!--        android:id="@+id/timeElapsedDisplay"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="30dp"-->
+<!--        android:layout_marginStart="30dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:text="@string/reset_timer_display"-->
+<!--        android:textSize="15sp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/webVid" />-->
+
     <WebView
         android:id="@+id/webVid"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/timeElapsedDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/reset_timer_display"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/webVid" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/titleDisplay"
@@ -42,9 +44,16 @@
         android:layout_height="wrap_content"
         android:text="Title"
         android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/timeElapsedDisplay"
-        app:layout_constraintTop_toBottomOf="@id/timeElapsedDisplay"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+<!--        app:layout_constraintTop_toBottomOf="@id/webVid" />-->
+    <!--        android:layout_marginTop="10dp"-->
+    <!--        app:layout_constraintStart_toStartOf="@id/timeElapsedDisplay"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/timeElapsedDisplay"/> -->
+
 
     <TextView
         android:id="@+id/channelNameDisplay"
@@ -60,7 +69,7 @@
         android:id="@+id/playPauseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/ic_baseline_play_icon"
         app:layout_constraintTop_toBottomOf="@id/channelNameDisplay"
         app:layout_constraintStart_toEndOf="@id/prevBtn"
