--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="30dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,11 +46,10 @@
         android:textSize="20sp"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-<!--        app:layout_constraintTop_toBottomOf="@id/webVid" />-->
-    <!--        android:layout_marginTop="10dp"-->
+        app:layout_constraintTop_toBottomOf="@id/webVid" />
+<!--            android:layout_marginTop="10dp"-->
     <!--        app:layout_constraintStart_toStartOf="@id/timeElapsedDisplay"-->
     <!--        app:layout_constraintTop_toBottomOf="@id/timeElapsedDisplay"/> -->
 
