--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@id/webVid" />-->
 
-    <WebView
-        android:id="@+id/webVid"
+    <VideoView
+        android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="30dp"
@@ -48,7 +48,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/webVid" />
+        app:layout_constraintTop_toBottomOf="@id/player" />
 <!--            android:layout_marginTop="10dp"-->
     <!--        app:layout_constraintStart_toStartOf="@id/timeElapsedDisplay"-->
     <!--        app:layout_constraintTop_toBottomOf="@id/timeElapsedDisplay"/> -->
